--- a/Images.html
+++ b/Images.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-<h1>Golden Gate Image</h1>
+<h1> " Golden Gate Image " </h1>
 <figure>
 <img src = "Golden_gate.jpg" weight = "500" height="250" class="roundedcorner" border="10"  usemap= "#golden gate"/>
 <figcaption>A image of golden gate</figcaption>
